import org.gradle.internal.os.OperatingSystem

plugins {
    id "java"
    id "application"
    id "com.gradleup.shadow" version "9.4.1"
    id "org.beryx.runtime" version "2.0.1"
    id "org.graalvm.buildtools.native" version "1.0.0"
}

java {
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

group = 'jp.ac.aoyama.it.ke.mrcube'
version = '26.4.3'

application {
    mainClass.set('jp.ac.aoyama.it.ke.mrcube.MR3')
}

project.ext {
    moduleName = 'jp.ac.aoyama.it.ke'
    artifactId = 'mrcube'
    defaultEncoding = 'UTF-8'
}

repositories {
    mavenCentral()
}

wrapper {
    gradleVersion = '9.4.1'
}

jar {
    manifest {
        attributes 'Main-Class': 'jp.ac.aoyama.it.ke.mrcube.MR3'
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Test) {
    systemProperty 'file.encoding', 'UTF-8'
}

tasks.withType(JavaExec) {
    systemProperty 'file.encoding', 'UTF-8'
}

test {
    useJUnitPlatform()
}

tasks.named('shadowJar', com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
    mergeServiceFiles()
    manifest {
        attributes 'Main-Class': 'jp.ac.aoyama.it.ke.mrcube.MR3'
    }
}

runtime {
    enableCds()
    options = ['--strip-debug', '--compress=zip-9', '--no-header-files', '--no-man-pages']
    imageDir = layout.buildDirectory.dir("mrcube-${version}")
    imageZip = layout.buildDirectory.file("mrcube-${version}.zip")

    jpackage {
        jvmArgs = ["-XX:+UseCompactObjectHeaders"]
        if (OperatingSystem.current().isWindows()) {
            jpackageHome = 'C:\\Program Files\\BellSoft\\LibericaJDK-25'
            installerType = 'msi'
            installerName = 'MRCube'
            imageOptions = ['--verbose', '--icon', './src/main/resources/images/mr3.ico']
            installerOptions = ['--vendor', 'Takeshi Morita', '--win-shortcut']
        } else if (OperatingSystem.current().isMacOsX()) {
            jpackageHome = '/Library/Java/JavaVirtualMachines/liberica-jdk-25.jdk/Contents/Home'
            installerType = 'dmg'
            imageOptions = ['--verbose', '--icon', './src/main/resources/images/mr3.icns']
            installerOptions = ['--vendor', 'Takeshi Morita']
        }

        imageName = "MRCube"
        skipInstaller = false
        installerName = "mrcube"
    }
}

tasks.runtime.doLast {
    copy {
        from('./README.md')
        into(layout.buildDirectory.file("mrcube-${version}"))
    }
    copy {
        from('./README.ja.md')
        into(layout.buildDirectory.file("mrcube-${version}"))
    }
    copy {
        from('./LICENSE')
        into(layout.buildDirectory.file("mrcube-${version}"))
    }
}

tasks.register('prepareNativeMsixFiles', Copy) {
    dependsOn 'nativeCompile'
    from(layout.buildDirectory.dir("/native/nativeCompile")) {
        include "*.exe"
        include "*.dll"
    }
    from('./README.md')
    from('./README.ja.md')
    from('./LICENSE')
    from('./src/main/resources/package/windows/AppxManifest.xml')
    from('./src/main/resources/package/windows/Assets') {
        into 'Assets'
    }

    into layout.buildDirectory.dir("/MRCube-Native-Package")
}

tasks.register('prepareJavaMsixFiles', Copy) {
    dependsOn 'jpackage'
    from(layout.buildDirectory.dir("/jpackage/MRCube")) {
        include "*.exe"
    }
    from(layout.buildDirectory.dir("/jpackage/MRCube/app")) {
        into "app"
    }
    from(layout.buildDirectory.dir("/jpackage/MRCube/runtime")) {
        into "runtime"
    }
    from('./README.md')
    from('./README.ja.md')
    from('./LICENSE')
    from('./src/main/resources/package/windows/AppxManifest.xml')
    from('./src/main/resources/package/windows/Assets') {
        into 'Assets'
    }

    into layout.buildDirectory.dir("/MRCube-Java-Package")
}

tasks.register('packNativeMsix', Exec) {
    dependsOn 'prepareNativeMsixFiles'
    group = 'build'
    def makeAppxPath = "C:/Program Files (x86)/Windows Kits/10/bin/10.0.22621.0/x64/makeappx.exe"
    def inputDir = layout.buildDirectory.dir("/MRCube-Native-Package").get().asFile
    def outputDir = layout.buildDirectory.dir("distribution").get().asFile
    def outputMsix = layout.buildDirectory.file("/distribution/MRCube-native-${version}.msix").get().asFile

    doFirst {
        if (!outputDir.exists()) {
            outputDir.mkdirs()
        }
    }
    commandLine makeAppxPath, 'pack', '/d', inputDir.absolutePath, '/p', outputMsix.absolutePath, '/o'
}

tasks.register('packJavaMsix', Exec) {
    dependsOn 'prepareJavaMsixFiles'
    group = 'build'
    def makeAppxPath = "C:/Program Files (x86)/Windows Kits/10/bin/10.0.22621.0/x64/makeappx.exe"
    def inputDir = layout.buildDirectory.dir("/MRCube-Java-Package").get().asFile
    def outputDir = layout.buildDirectory.dir("distribution").get().asFile
    def outputMsix = layout.buildDirectory.file("/distribution/MRCube-${version}.msix").get().asFile

    doFirst {
        if (!outputDir.exists()) {
            outputDir.mkdirs()
        }
    }
    commandLine makeAppxPath, 'pack', '/d', inputDir.absolutePath, '/p', outputMsix.absolutePath, '/o'
}

graalvmNative {

    binaries.all {
        resources.autodetect()
    }

    agent {
        enabled = true
        modes {
            standard {
            }
        }
        metadataCopy {
            inputTaskNames.add("run")
            outputDirectories.add("src/main/resources/META-INF/native-image")
            mergeWithExisting = true
        }
    }

    binaries.main {
        imageName = "MRCube"
        mainClass = 'jp.ac.aoyama.it.ke.mrcube.MR3'
        buildArgs.add('--no-fallback')
        buildArgs.add('-H:+AddAllCharsets')
        buildArgs.add('-Djava.awt.headless=false')
        buildArgs.add('-J-XX:+UseCompactObjectHeaders')
        if (OperatingSystem.current().isWindows()) {
            buildArgs.add('-H:NativeLinkerOption=/SUBSYSTEM:WINDOWS')
            buildArgs.add('-H:NativeLinkerOption=/ENTRY:mainCRTStartup')
            buildArgs.add("-H:NativeLinkerOption=/MANIFEST:EMBED")
            buildArgs.add("-H:NativeLinkerOption=/MANIFESTINPUT:${project.projectDir}/app.manifest")
        }
    }
}

dependencies {
    implementation 'com.formdev:flatlaf:3.7.1'
    implementation 'com.formdev:flatlaf-extras:3.7.1'
    implementation 'jgraph:jgraph:5.13.0.0'
    implementation 'org.apache.jena:apache-jena-libs:5.6.0'
    implementation 'org.slf4j:slf4j-simple:2.0.17'
    implementation 'org.apache.xmlgraphics:batik-svg-dom:1.19'
    implementation 'org.apache.xmlgraphics:batik-svggen:1.19'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.14.3'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.14.3'
}

